--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "mlflow (>=3.6.0,<4.0.0)",
     "dvc (>=3.64.0,<4.0.0)",
+    "telethon (>=1.42.0,<2.0.0)",
+    "dvc-gdrive (>=3.0.1,<4.0.0)",
 ]
 
 
