--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pymorphy3 = ">=2.0.6,<3.0.0"
 python-dotenv = ">=1.0.1,<2.0.0"
 omegaconf = "^2.3.0"
 hydra-core = "^1.3.2"
+streamlit = "^1.52.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
