--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ notebooks/topics.txt
 notebooks/temp-data
 notebooks/temp-charts
 /my-artifacts
-/models
+/models/bertopic_model.pkl
+/models/preprocessor.pkl
